--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
+    "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "openai": "^6.9.1",
     "prisma": "^5.22.0",
